--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Weather Api</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <script src="./assets/js/skycons.js" defer></script>
+    <script src="./lib/skycons.js" defer></script>
     <script src="./lib/jquery-3.2.1.min.js" defer></script>
-    <script src="./assets/js/main.js" defer></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
                 <span class="temp-type">°C</span>
             </div>
             <h2 class="weather-description"></h2>
-            <p class="made-by">Made by Simo Edwin with FFC WEATHER API.</p>
+            <p class="made-by">Powered by Free Dode Camp Weather API.</p>
         </div>
     </div>
 </body>
